[JSC] Fix testb3 debug failures https://bugs.webkit.org/show_bug.cgi?id=201382

Reviewed by Mark Lam.

Fix testb3 debug failures due to incorrect types of operations like pointer + int32.

* b3/testb3_8.cpp:
(testByteCopyLoop):
(testByteCopyLoopStartIsLoopDependent):
(testByteCopyLoopBoundIsLoopDependent):


Canonical link: https://commits.webkit.org/215039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249370 268f45cc-cd09-0410-ab3c-d52691b4dbfc